syntax = "proto3";

package com.vinod.serverstreaming;

option java_multiple_files = true;
option java_package = "com.vinod.demo.grpc.serverstream.generated";
option java_outer_classname = "GreeterProto";

// Define the gRPC service
service GreeterService {
  // RPC method: client sends HelloRequest, server responds with HelloResponse
  rpc SayHelloManyTimes (HelloRequest) returns (stream HelloResponse);
}

// Request message
message HelloRequest {
  string name = 1;
}

// Response message
message HelloResponse {
  string message = 1;
}